maze.lessons.maze.pledge.PledgeMaze.scala.code
var virage = 0

override def run() 
{	
	def keepHandOnSideWall()
	{
		gauche()
		if(estFaceMur())
		{
			droite()
			if(estFaceMur())
			{
				droite()
				virage = virage+1
				if(estFaceMur())
				{
					droite()
					virage = virage+1
				}
				else avance()
			}
			else avance()
		}
		else 
		{
			avance()
			virage = virage-1
		}
	}

	def isDirectionFree(): Boolean =
	{
		if(!estFaceMur() && getDirection()==Direction.NORTH)
			return true
		else return false		
	}
		
	while(!estSurBiscuit())
	{	
		virage = 0
		
		if(isDirectionFree())
		{
			avance()
			/*
			if(estFaceMur())
			{
				droite(); virage = virage+1
			}
		}	
		*/
		else
		{	
		while( (virage%4)!=0 || !isDirectionFree() )
			keepHandOnSideWall()
		}	
	}

	prendBiscuit()
}
